fix: dark mode

--- a/src/style.css
+++ b/src/style.css
@@ -59,7 +59,21 @@ button {
   --at-apply: p-y-1 p-x-4 border-1 border-solid border-gray/40 rounded-2 text-sm
     transition-all duration-200
     focus:ring-2 ring-offset-1 ring-gray/50
-    text-black
     hover:filter-brightness-95 focus:filter-brightness-95
-    hover:shadow-md;
+    hover:shadow-md
+    bg-light-500 dark:bg-dark-500
+    dark:border-dark-100
+    dark:ring-offset-dark;
+}
+
+input {
+  font-family: Inter;
+  --at-apply: p-y-2 p-x-3 border-1 border-solid border-gray/40 rounded-2 dark:bg-dark
+    transition-all duration-200
+    focus:ring-2 ring-offset-1 ring-gray/50
+    dark:text-light
+    hover:shadow-md dark:ring-offset-dark;
+}
+input:focus {
+  outline: none;
 }
